applications/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: browserless
spec:
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app.kubernetes.io/component: browserless
    app.kubernetes.io/name: browserless
    app.kubernetes.io/part-of: applications
---
apiVersion: v1
kind: Service
metadata:
  name: dify-api
spec:
  ports:
  - name: http
    port: 5001
    targetPort: http
  selector:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: dify
    app.kubernetes.io/part-of: applications
---
apiVersion: v1
kind: Service
metadata:
  name: dify-app
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app.kubernetes.io/component: nginx
    app.kubernetes.io/name: dify
    app.kubernetes.io/part-of: applications
---
apiVersion: v1
kind: Service
metadata:
  name: dify-web
spec:
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app.kubernetes.io/component: web
    app.kubernetes.io/name: dify
    app.kubernetes.io/part-of: applications
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  ports:
  - name: socks
    port: 1080
    targetPort: socks
  - name: proxy
    port: 8080
    targetPort: proxy
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/name: proxy
    app.kubernetes.io/part-of: applications
---
apiVersion: v1
kind: Service
metadata:
  name: gloomhaven
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app.kubernetes.io/component: secretariat
    app.kubernetes.io/name: gloomhaven
    app.kubernetes.io/part-of: applications
---
apiVersion: v1
kind: Service
metadata:
  name: rsshub
spec:
  ports:
  - name: http
    port: 1200
    targetPort: http
  selector:
    app.kubernetes.io/component: rsshub
    app.kubernetes.io/name: rss
    app.kubernetes.io/part-of: applications
