applications/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsshub
spec:
  ingressClassName: external-ingress
  rules:
  - host: rss.progamesigner.com
    http:
      paths:
      - backend:
          service:
            name: rsshub
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - rss.progamesigner.com
    secretName: tls-com-progamesigner-rss
